--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,1 +1,2 @@
 updates.ignore = [ { groupId = "edu.berkeley.cs", artifactId = "firrtl" } ]
+pullRequests.frequency = "0 0 1 * *" # The first of every month
