Add documentation building to CI
Signed-off-by: Schuyler Eldridge <schuyler.eldridge@ibm.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -100,6 +100,10 @@ jobs:
         run: |
           versionDeps=$(gawk -f repo/.github/scripts/generateVersionOverrides.gawk deps)
           echo "versonDeps: $versionDeps"
+      - name: documentation
+        id: doc
+        run: cat /dev/null | sbt $versionDeps doc
+        working-directory: ./repo
       - name: test
         id: test
         run: cat /dev/null | sbt $versionDeps +test
