--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: automatic squash-and-merge on CI success and review
     conditions:
-      - status-success=Travis CI - Pull Request
+      - status-success=ci
       - "#approved-reviews-by>=1"
       - "#changes-requested-reviews-by=0"
       - base=master
