--- a/.mergify.yml
+++ b/.mergify.yml
@@ -67,7 +67,7 @@ pull_request_rules:
 
   - name: automatic squash-and-merge of 1.2.x backport PRs
     conditions:
-      - status-success=Travis CI - Pull Request
+      - status-success=ci
       - "#changes-requested-reviews-by=0"
       - base=1.2.x
       - label="Backport"
