--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Cache
         uses: coursier/cache-action@v5
       - name: Setup Mill
-        uses: jodersky/setup-mill@master
+        uses: jodersky/setup-mill@v0.2.3
       - name: Mill sanity check
         id: mill
         run: mill __.compile
