--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,39 @@ on:
 
 jobs:
   test:
-    name: ci
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        scala: [ 2.13.4, 2.12.10, 2.11.12 ]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Scala
+        uses: olafurpg/setup-scala@v10
+      - name: Cache
+        uses: coursier/cache-action@v5
+      - name: Test
+        run: sbt ++${{ matrix.scala }} test
+
+  doc:
+    name: Documentation and Formatting
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Scala
+        uses: olafurpg/setup-scala@v10
+      - name: Cache
+        uses: coursier/cache-action@v5
+      - name: Documentation
+        id: doc
+        run: sbt doc
+      - name: Check Formatting
+        run: sbt scalafmtCheckAll
+
+  mill:
+    name: Mill Sanity Check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,24 +56,29 @@ jobs:
       - name: Mill sanity check
         id: mill
         run: mill __.compile
-      - name: Documentation
-        id: doc
-        run: sbt doc
-      - name: Test
-        id: test
-        run: sbt +test
-      - name: Check Formatting
-        run: sbt scalafmtCheckAll
-      # Publishing steps
-      # These steps are here to avoid duplicated work and logic
+
+  all_tests_passed:
+    name: "all tests passed"
+    needs: [test, doc, mill]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo Success!
+
+  publish:
+    needs: [all_tests_passed]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Scala
+        uses: olafurpg/setup-scala@v10
+      - name: Cache Scala
+        uses: coursier/cache-action@v5
       - name: Setup GPG (for Publish)
-        id: publish_start
-        # on.push.branches above enforces we only publish from correct branches
-        if: github.event_name == 'push'
         uses: olafurpg/setup-gpg@v3
       - name: Publish
-        # publish_start if guards this step
-        if: steps.publish_start.outcome != 'skipped'
         run: sbt ci-release
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
