--- a/.mergify.yml
+++ b/.mergify.yml
@@ -53,7 +53,7 @@ pull_request_rules:
 
   - name: automatic squash-and-merge of 1.3.x backport PRs
     conditions:
-      - status-success=ci
+      - status-success=all tests passed
       - "#changes-requested-reviews-by=0"
       - base=1.3.x
       - label="Backport"
@@ -67,7 +67,7 @@ pull_request_rules:
 
   - name: automatic squash-and-merge of 1.2.x backport PRs
     conditions:
-      - status-success=ci
+      - status-success=all tests passed
       - "#changes-requested-reviews-by=0"
       - base=1.2.x
       - label="Backport"
