--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        scala: [ 2.13.4, 2.12.10, 2.11.12 ]
+        scala: [ 2.13.4, 2.12.13 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
