--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,80 +1,79 @@
+queue_rules:
+- name: default
+  conditions:
+  - status-success=all tests passed
 pull_request_rules:
-  - name: automatic squash-and-merge on CI success and review
-    conditions:
-      - status-success=all tests passed
-      - "#approved-reviews-by>=1"
-      - "#changes-requested-reviews-by=0"
-      - base=master
-      - label="Please Merge"
-      - label!="DO NOT MERGE"
-      - label!="bp-conflict"
-    actions:
-      merge:
-        method: squash
-        strict: smart
-        strict_method: merge
+- name: automatic squash-and-merge on CI success and review
+  conditions:
+  - status-success=all tests passed
+  - '#approved-reviews-by>=1'
+  - '#changes-requested-reviews-by=0'
+  - base=master
+  - label="Please Merge"
+  - label!="DO NOT MERGE"
+  - label!="bp-conflict"
+  actions:
+    queue:
+      name: default
+      method: squash
+      update_method: merge
+- name: backport to 1.5.x
+  conditions:
+  - merged
+  - base=master
+  - milestone=1.5.x
+  actions:
+    backport:
+      branches:
+      - 1.5.x
+      labels:
+      - Backport
+      ignore_conflicts: true
+      label_conflicts: bp-conflict
+    label:
+      add:
+      - Backported
+- name: backport to 1.3.x, 1.5.x
+  conditions:
+  - merged
+  - base=master
+  - milestone=1.3.x
+  actions:
+    backport:
+      branches:
+      - 1.3.x
+      - 1.5.x
+      labels:
+      - Backport
+      ignore_conflicts: true
+      label_conflicts: bp-conflict
+    label:
+      add:
+      - Backported
+- name: automatic squash-and-mege of 1.3.x backport PRs
+  conditions:
+  - status-success=all tests passed
+  - '#changes-requested-reviews-by=0'
+  - base=1.3.x
+  - label="Backport"
+  - label!="DO NOT MERGE"
+  - label!="bp-conflict"
+  actions:
+    queue:
+      name: default
+      method: squash
+      update_method: merge
+- name: automatic squash-and-mege of 1.5.x backport PRs
+  conditions:
+  - status-success=all tests passed
+  - '#changes-requested-reviews-by=0'
+  - base=1.5.x
+  - label="Backport"
+  - label!="DO NOT MERGE"
+  - label!="bp-conflict"
+  actions:
+    queue:
+      name: default
+      method: squash
+      update_method: merge
 
-  - name: backport to 1.3.x
-    conditions:
-      - merged
-      - base=master
-      - milestone=1.3.x
-    actions:
-      backport:
-        branches:
-          - 1.3.x
-        ignore_conflicts: True
-        label_conflicts: "bp-conflict"
-      label:
-        add: [ Backported ]
-
-  - name: backport to 1.2.x and 1.3.x
-    conditions:
-      - merged
-      - base=master
-      - milestone=1.2.x
-    actions:
-      backport:
-        branches:
-          - 1.2.x
-          - 1.3.x
-        ignore_conflicts: True
-        label_conflicts: "bp-conflict"
-      label:
-        add: [ Backported ]
-
-
-  - name: label Mergify backport PR
-    conditions:
-      - title~=\(bp \#\d+\)
-    actions:
-      label:
-        add: [ Backport ]
-
-  - name: automatic squash-and-merge of 1.3.x backport PRs
-    conditions:
-      - status-success=all tests passed
-      - "#changes-requested-reviews-by=0"
-      - base=1.3.x
-      - label="Backport"
-      - label!="DO NOT MERGE"
-      - label!="bp-conflict"
-    actions:
-      merge:
-        method: squash
-        strict: smart
-        strict_method: merge
-
-  - name: automatic squash-and-merge of 1.2.x backport PRs
-    conditions:
-      - status-success=all tests passed
-      - "#changes-requested-reviews-by=0"
-      - base=1.2.x
-      - label="Backport"
-      - label!="DO NOT MERGE"
-      - label!="bp-conflict"
-    actions:
-      merge:
-        method: squash
-        strict: smart
-        strict_method: merge
